# secured-email-replying-ai-agent

./: .gitignore  AGENTS.md  README.md  intial.MD  pyproject.toml  towardsai_mixed_courses.csv
backend/: .env.example
backend/app/: config.py  dependencies.py  main.py  schemas.py  security.py
backend/app/api/routes/: auth.py  replies.py  threads.py
backend/app/services/: gemini.py  gmail.py  google_auth.py  persistence.py  session.py
backend/supabase/: schema.sql
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: draft-panel.tsx  login-card.tsx  logout-button.tsx  thread-list.tsx
frontend/lib/: api.ts  session.ts
